--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Serena J. Gu</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Serena J. Gu!</h1>
+				<p>Testm <em> Test</em> Test <a href="/about">TEST..</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:serenajgu@gmail.com">email</a></li>
+        		<li><a href="https://github.com/cytfloar">github.com/cytfloar</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
