--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Serena J. Gu</title>
+		<title>Test</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -15,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Serena J. Gu!</h1>
-				<p>Testm <em> Test</em> Test <a href="/about">TEST..</a></p>
+				<p>x <em>test</em> xx <a href="/about">tests...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
