--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Test</title>
+		<title>Serena J. Gu</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Serena J. Gu!</h1>
-				<p>x <em>test</em> xx <a href="/about">tests...</a></p>
+				<p>xtest <em> testsssss </em> xxtesttssss <a href="/about">tests...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
